route_table_association.tf
resource "aws_route_table_association" "public_a" {
    subnet_id = aws_subnet.public_a.id
    route_table_id = aws_route_table.public.id

    # tags = {
    #     Name = "icash_dev"
    # }
}

resource "aws_route_table_association" "public_c" {
    subnet_id = aws_subnet.public_c.id
    route_table_id = aws_route_table.public.id

    # tags = {
    #     Name = "icash_dev"
    # }
}

resource "aws_route_table_association" "private_a" {
    subnet_id = aws_subnet.private_a.id
    route_table_id = aws_route_table.private_a.id

    # tags = {
    #     Name = "icash_dev"
    # }
}

resource "aws_route_table_association" "private_c" {
    subnet_id = aws_subnet.private_c.id
    route_table_id = aws_route_table.private_c.id

    # tags = {
    #     Name = "icash_dev"
    # }
}
